<resources>
    <string name="app_name">MoHae</string>

    <string name="navigation_feedback">검토</string>
    <string name="navigation_qa">질문</string>
    <string name="navigation_group">모임</string>
    <string name="navigation_place">시설</string>
    <string name="navigation_mypage">계정</string>
    <string name="login_title_tv">로그인</string>
    <string name="login_id_edit">아이디</string>
    <string name="login_password_edit">비밀번호</string>
    <string name="login_signup_question_tv">아직 계정이 없으신가요?</string>
    <string name="login_signup_tv">회원가입</string>
    <string name="signup_title_tv">회원가입</string>
    <string name="signup_username_edit">사용자 이름</string>
    <string name="signup_id_edit">아이디</string>
    <string name="signup_password_edit">비밀번호</string>
    <string name="signup_password_check_edit">비밀번호 확인</string>
    <string name="signup_next_btn">다음</string>
    <string name="signup_address_complete_btn">확인</string>
    <string name="group_doc_title_tv">모임 게시물 작성</string>
    <string name="group_doc_title_edit">제목을 입력하세요</string>
    <string name="group_doc_address_edit">주소를 입력하세요</string>
    <string name="group_doc_date_edit">날짜를 입력하세요</string>
    <string name="group_doc_summary_edit">요약을 입력하세요</string>
    <string name="group_doc_image_tv">이미지를 첨부하세요</string>
    <string name="group_doc_description_edit">설명을 입력하세요</string>
    <string name="group_detail_dialog_join_tv">참가</string>
    <string name="group_detail_dialog_leave_tv">탈퇴</string>
    <string name="feedback_doc_title_tv">검토 게시물 작성</string>
    <string name="feedback_doc_title_edit">제목을 입력하세요</string>
    <string name="feedback_doc_address_edit">주소를 입력하세요</string>
    <string name="feedback_doc_summary_edit">요약을 입력하세요</string>
    <string name="feedback_doc_image_tv">이미지를 첨부하세요</string>
    <string name="feedback_doc_description_edit">문제 설명을 입력하세요</string>
    <string name="feedback_detail_dialog_like_tv">좋아요</string>
    <string name="feedback_detail_dialog_hate_tv">싫어요</string>
    <string name="qa_question_doc_title_tv">질문 게시물 작성</string>
    <string name="qa_question_doc_title_edit">제목을 입력하세요</string>
    <string name="qa_question_doc_summary_edit">요약을 입력하세요</string>
    <string name="qa_question_doc_image_tv">이미지를 첨부하세요</string>
    <string name="qa_question_doc_description_edit">설명을 입력하세요</string>
    <string name="qa_answer_doc_title_tv">답변 작성</string>
    <string name="qa_answer_doc_answer_edit">답변을 입력하세요</string>
    <string name="mypage_profile_logout_tv">로그아웃</string>
    <string name="mypage_profile_edit_tv">수정</string>
    <string name="mypage_profile_edit_complete_tv">완료</string>
    <string name="mypage_profile_edit_image_tv">편집</string>
    <string name="mypage_profile_edit_description_edit">소개를 입력하세요</string>
    <string name="place_doc_title_tv">시설 등록</string>
    <string name="place_doc_title_edit">시설 이름을 입력하세요</string>
    <string name="place_doc_description_edit">소개를 입력하세요</string>
    <string name="place_doc_map_tv">시설 위치를 설정하세요</string>
</resources>
