<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="vm"
                type="com.mohaeyo.mohae.viewmodel.main.group.GroupViewModel"/>
    </data>
    <ScrollView
            android:id="@+id/group_doc_srv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/group_doc_title_tv"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@font/nanum_square_otf_bold"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/group_doc_title_tv"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                    app:cardCornerRadius="14dp"
                    app:cardElevation="14dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="36dp"
                    android:id="@+id/group_doc_title_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/group_doc_title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/group_doc_title_edit"
                        android:padding="14dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/nanum_square_otf_bold"
                        android:lineSpacingExtra="2sp"
                        android:hint="@string/group_doc_title_edit"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    app:cardCornerRadius="14dp"
                    app:cardElevation="14dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    android:id="@+id/group_doc_address_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/group_doc_title_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/group_doc_address_edit"
                        android:padding="14dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/nanum_square_otf_bold"
                        android:lineSpacingExtra="2sp"
                        android:hint="@string/group_doc_address_edit"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    app:cardCornerRadius="14dp"
                    app:cardElevation="14dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    android:id="@+id/group_doc_date_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/group_doc_address_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/group_doc_date_edit"
                        android:padding="14dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/nanum_square_otf_bold"
                        android:lineSpacingExtra="2sp"
                        android:hint="@string/group_doc_date_edit"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    app:cardCornerRadius="14dp"
                    app:cardElevation="14dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    android:id="@+id/group_doc_summary_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/group_doc_date_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/group_doc_summary_edit"
                        android:padding="14dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/nanum_square_otf_bold"
                        android:lineSpacingExtra="2sp"
                        android:hint="@string/group_doc_summary_edit"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    app:cardCornerRadius="14dp"
                    app:cardElevation="14dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    android:id="@+id/group_doc_image_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/group_doc_summary_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/group_doc_image_imv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/group_doc_image_edit"
                        android:padding="14dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/nanum_square_otf_bold"
                        android:lineSpacingExtra="2sp"
                        android:hint="@string/group_doc_image_tv"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    app:cardCornerRadius="14dp"
                    app:cardElevation="14dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="54dp"
                    android:id="@+id/group_doc_description_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/group_doc_image_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/group_doc_description_edit"
                        android:paddingVertical="52dp"
                        android:paddingHorizontal="14dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/nanum_square_otf_bold"
                        android:lineSpacingExtra="2sp"
                        android:hint="@string/group_doc_description_edit"
                        android:textSize="14sp"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>